--- a/CV_SiteContent/CSS/werdegang.css
+++ b/CV_SiteContent/CSS/werdegang.css
@@ -26,6 +26,11 @@
 }
 
 .werdegang_container h4 {
+    font-size: 18px;
+    color: var(--text-color);
+}
+
+.werdegang_container h5 {
     font-size: 24px;
     margin-bottom: 10px;
     color: var(--main-brand-color);
