Anpassen der Hintegrundfarben

--- a/CV_SiteContent/CSS/lebenslauf.css
+++ b/CV_SiteContent/CSS/lebenslauf.css
@@ -1,6 +1,6 @@
 #lebenslauf_section{
     padding: 100px 0;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     display: flex;
     justify-content: center;
     align-items: center;
