--- a/CV_SiteContent/CSS/werdegang.css
+++ b/CV_SiteContent/CSS/werdegang.css
@@ -66,7 +66,11 @@
     }
 
     .werdegang_container h4 {
-        font-size: 20px;
+        font-size: 12px;
+    }
+
+    .werdegang_container h4 {
+        font-size: 18px;
     }
 
     .werdegang_container p {
