--- a/CV_SiteContent/CSS/general_Settings.css
+++ b/CV_SiteContent/CSS/general_Settings.css
@@ -14,6 +14,11 @@
     padding: 0;
 }
 
+html, body { 
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     min-height: 100vh;
     background-color: var(--primary-color);
