--- a/CV_SiteContent/CSS/contact.css
+++ b/CV_SiteContent/CSS/contact.css
@@ -74,6 +74,35 @@
     background-color: var(--secondary-color);
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--secondary-color);
+    color: var(--primary-text-color);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.popup button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: var(--main-brand-color);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.popup button:hover {
+    background-color: var(--secondary-color);
+}
+
 /* Responsive Design */
 @media (max-width: 900px) {
     .contact_container {
