button color angepasst

--- a/public/CSS/contact.css
+++ b/public/CSS/contact.css
@@ -71,7 +71,7 @@
 }
 
 .contact_form button:hover {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
 }
 
 .popup {
